# DP-Contracts

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
contracts/org-registry/: Cargo.toml
contracts/org-registry/src/: lib.rs  test.rs
contracts/org-registry/test_snapshots/test/: contract_registers.1.json
contracts/payroll/: Cargo.toml
contracts/payroll/src/: lib.rs  test.rs
contracts/payroll/test_snapshots/test/: contract_registers.1.json
contracts/vesting/: Cargo.toml
contracts/vesting/src/: lib.rs  test.rs
contracts/vesting/test_snapshots/test/: contract_registers.1.json
