[workspace]
resolver = "2"
members = [
    "contracts/payroll",
    "contracts/org-registry",
    "contracts/vesting",
]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
