[package]
name = "payroll"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
org-registry = { path = "../org-registry" }

[features]
testutils = ["soroban-sdk/testutils"]
